css/styles.scss
---
---

// Sass styles for the site

@import 'syntax';

$font-family: 'Vollkorn', serif;
$font-family-mono: Courier New, Courier, monospace;
$font-color: #4A4A4A;
$font-color--focus: lighten($font-color, 10%);
$font-color--dark: #fcfcfc;
$font-color-dark--focus: darken($font-color--dark, 10%);
$background--dark: #0A0A0A;
$font-weight-normal: 400;
$font-weight-bold: 700;

$spacing-unit: 48px;

$transition-color: color 0.4s ease;

$breakpoint-sm: 767px;

// General Element Styles

body {
  color: $font-color;
  font-family: $font-family;
  margin: 0;

  @media (prefers-color-scheme: dark) {
    color: $font-color--dark;
    background: $background--dark;
  }
}

h1, h2, h3, h4, h5, h6 {
  color: $font-color;
  font-family: $font-family;
  font-weight: $font-weight-bold;

  @media (prefers-color-scheme: dark) {
    color: $font-color--dark;
  }
}

h1 {
  font-size: 36px;
  line-height: 42px;
}

h2 {
  font-size: 30px;
  line-height: 36px;
}

h3 {
  font-size: 24px;
  line-height: 28px;
}

h4 {
  font-size: 20px;
  line-height: 24px;
}

h5 {
  font-size: 16px;
  line-height: 18px;
}

h6 {
  font-size: 14px;
  line-height: 16px;
}

p, ul, ol, li, span, blockquote, small {
  font-family: $font-family;
  font-weight: $font-weight-normal;
  font-size: 18px;
  line-height: 24px;
}

p {
  &.intro {
    font-size: 18px;
  }

  &.small {
    font-size: 14px;
  }
}

blockquote {
  font-size: 18px;
  font-style: italic;
  line-height: 26px;

  p {
    @extend blockquote;
  }
}

hr {
  border: none; // clear out default border
  border-top: 1px solid rgba($font-color--focus, 0.2);

  @media (prefers-color-scheme: dark) {
    border-top: 1px solid rgba($font-color-dark--focus, 0.2);
  }
}

a {
  color: $font-color;
  transition: $transition-color;

  @media (prefers-color-scheme: dark) {
    color: $font-color--dark;
  }

  &:hover,
  &:focus {
    color: $font-color--focus;

    @media (prefers-color-scheme: dark) {
      color: $font-color-dark--focus;
    }
  }
}

pre,
code,
code span {
  font-family: $font-family-mono;
  font-size: 16px;
}

pre {
  margin-bottom: 20px;

  &.highlight {
    background-color: rgba(239, 239, 239, 0.3);
  }
}

ol,
ul {
  padding-left: 0;
  margin: $spacing-unit / 2 0;
}

ul {
  list-style: disc;
}

ol {
  padding-left: 16px;
}

li {
  padding-bottom: 12px;
}

img,
iframe {
  max-width: 100%;
}

figure {
  margin: 0 0 60px 0;
}

figcaption {
  margin-top: 10px;
  text-align: center;
}

.center {
  text-align: center;
}

.profile-photo {
  border-radius: 1000px;
  max-width: 150px;
}

.container {
  max-width: 1024px;
  margin: 0 auto;
  padding: 0 $spacing-unit;

  @media (max-width: $breakpoint-sm) {
    padding: 0 $spacing-unit / 1.5;
  }
}

.wrapper {
  max-width: 560px;
  margin: 0 auto;
}

.section {
  margin-bottom: $spacing-unit;
}

// Header & Footer

.site-header,
.site-footer {
  align-items: center;
  display: flex;
  flex-direction: row;
  margin: $spacing-unit / 2 0;

  @media (max-width: $breakpoint-sm) {
    flex-direction: column;
    text-align: center;
  }
}

.site-footer {
  @media (max-width: $breakpoint-sm) {
    flex-direction: column-reverse;
  }

  .nav {
    @media (max-width: $breakpoint-sm) {
      flex-direction: column;
      margin-bottom: $spacing-unit / 2;
    }

    .nav-item {
      @media (max-width: $breakpoint-sm) {
        padding: $spacing-unit / 4 0;
      }
    }
  }
}

.header-anchor {
  @extend a;

  text-decoration: none;
}

.title, .colophon {
  align-self: flex-start;
  font-size: 18px;
  font-weight: $font-weight-normal;
  margin: 0;
  width: 100%;

  @media (max-width: $breakpoint-sm) {
    margin-bottom: $spacing-unit / 2;
  }

  a {
    @extend .header-anchor;

    &.license-link {
      text-decoration: underline;
    }
  }
}

.title {
  font-weight: bold;
}

.colophon {
  @media (max-width: $breakpoint-sm) {
    margin-bottom: 0;
  }
}

.nav {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  list-style: none;
  margin: 0;
  padding-left: 0;
  width: 100%;

  @media (max-width: $breakpoint-sm) {
    justify-content: center;
  }
}

.nav-item {
  display: inline-block;
  font-size: 16px;
  margin: 0 $spacing-unit / 4;

  &:last-of-type {
    margin-right: 0;

    @media (max-width: $breakpoint-sm) {
      margin-right: $spacing-unit / 4;
    }
  }

  a {
    @extend .header-anchor;
  }
}

// Content

.content {
  margin: $spacing-unit auto;
}

.works-list {
  display: grid;
  list-style: none;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: auto;
  grid-gap: 2rem;
  margin: 46px auto;

  @media screen and (max-width: 500px) {
    grid-gap: 1rem;
    grid-template-columns: repeat(1, 1fr);
  }
}

.wli {
  box-sizing: border-box;
}

.wli-title {
  margin-top: $spacing-unit / 4;
  margin-bottom: $spacing-unit / 4;
}

// Page Layouts

//// Home

#home {
  .intro {
    margin-bottom: $spacing-unit;
    text-align: center;
  }

  h2, h3 {
    text-align: center;
  }
}

.substack-iframe {
  margin: 24px auto 48px;
  text-align: center;
}

// Post / Entry

.post-meta {
  @extend .small;

  margin: 0;
}

.post-nav {
  margin-top: $spacing-unit;
  text-align: center;

  .post-nav-item {
    display: block;
    margin-bottom: $spacing-unit / 2;
    text-align: center;
    width: 100%;
  }
}

// Work

.work__intro {
  .work__title {
    margin-bottom: $spacing-unit / 4;
  }

  &.short-story {
    text-align: center;
  }
}

// Prose

.prose {
  margin: $spacing-unit / 2 0 $spacing-unit;

  p {
    line-height: 26px;
    margin: 0 0;
    text-align: justify;
    text-indent: 32px;

  }

  > p:first-child {
    text-indent: 0;

    &::first-letter {
      font-weight: bold;
      font-size: 24px;
    }
  }

  blockquote p {
    font-size: 16px;
  }

  .section-break {
    text-align: center;
    margin: 24px 0;
  }

  &.poem {
    > p:first-child {
      &::first-letter {
        font-weight: normal;
        font-size: inherit;
      }
    }
  }
}

// Chapter

.chapter__work-title {
  display: inline-block;
  color: $font-color--focus;
  font-size: 14px;
  font-style: italic;
  text-align: center;
  width: 100%;

  @media (prefers-color-scheme: dark) {
    color: $font-color-dark--focus;
  }
}

.chapter__title {
  margin: $spacing-unit / 12 0;
  text-align: center;
}

.current-chapter {
  font-weight: $font-weight-bold;
}

.chapter__toc {
  margin: 48px 0 12px;
  text-align: center;

  ul {
    list-style: none;
  }
}

.chapter__collected-in {
  text-align: center;

  a {
    font-style: italic;
  }
}

// Gumroad newsletter, copied from their embed snippet and modified as
// needed
.gumroad-follow-form-embed {
  zoom: 1;
}

.gumroad-follow-form-embed:before, .gumroad-follow-form-embed:after {
  display: table;
  line-height: 0;
  content: "";
}

.gumroad-follow-form-embed:after {
  clear: both;
}

.gumroad-follow-form-embed * {
  margin: 0;
  border: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box !important;
  float: left !important;
}

.grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: auto;
  grid-gap: 1.5rem;
  text-align: center;
  margin: 46px auto;

  &__item {
    flex-wrap: wrap;
    width: 100%;
    justify-content: center;

    box-sizing: border-box;
    text-decoration: none;
    background: #e7e7e7;
    padding: 16px;
    border-radius: 6px;
    transition: background .3s;

    @media (prefers-color-scheme: dark) {
      background: #292929;
    }

    h2 {
      width: 100%;
      font-size: 20px;
      line-height: 24px;
      padding: 0;
      margin: 12px 0 0;
    }

    p {
      margin: 12px 0 0;
      padding: 0;
    }

    i {
      font-size: 32px;
      height: 40px;
    }

    &:focus, &:hover {
      background: #b1b1b1;
      transition: background .3s;

      @media (prefers-color-scheme: dark) {
        background: #575757;
      }
    }
  }

  @media screen and (max-width: 500px) {
    grid-gap: 0.8rem;
    grid-template-columns: repeat(1, 1fr);
  }
}

.full-width {
  width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  padding: 12px 0;
  margin-left: -50vw;
  margin-right: -50vw;
}

